<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_calc"
        android:title="@string/title_calculator" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_qr"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_update"
        android:icon="@drawable/ic_update"
        android:title="@string/title_update" />

</menu>